Added history prototype.
